include CDN of AwesomeFonts used in ToDoItemsV2 component

--- a/helloworld/public/index.html
+++ b/helloworld/public/index.html
@@ -29,6 +29,11 @@
     <!--
       Use Material UI's recommended Roboto Font from Google's CDN
     -->
+    <link rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <!--
+     Add Font Awesome icons from their CDN
+    -->
     <title>React App</title>
   </head>
   <body>
